--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -11,16 +11,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "@repo/logger": "*",
     "@repo/ui": "*",
+    "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.6.0",
     "next": "^15.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.2.1",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@repo/interface": "*",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
