--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,10 @@
       "dependsOn": ["^build"],
       "cache": false,
       "persistent": true
+    },
+    "start": {
+      "dependsOn": ["build"],
+      "cache": false
     }
   }
 }
